<resources>
    <string name="app_name">FindVelib</string>

    <string name="about">About</string>
    <string name="contributors">FindVelib by Benjamin Morali and Guillaume Normand</string>
    <string name="search">Search</string>

    <string name="name">Name: </string>
    <string name="address">Address: </string>
    <string name="status">Status: </string>
    <string name="bikes">Number of places: </string>
    <string name="available">Number available: </string>
    <string name="maj">Last update: </string>
    <string name="bad_connection">Unable to connect. Please check your internet connection</string>
    <string name="time">Time</string>
    <string name="bike">Bike</string>
    <string name="info">Information</string>
    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
</resources>
