<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:stretchColumns="1"
            android:shrinkColumns="1">

            <TableRow>
                <ImageView
                    android:id="@+id/imageViewName"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_location_city_black_24dp"
                    android:contentDescription="@string/city"/>

                <TextView
                    android:id="@+id/station_name"
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"/>
            </TableRow>

            <TableRow>
                <ImageView
                    android:id="@+id/imageViewStatus"
                    android:layout_gravity="center"
                    android:src="@drawable/station_open"
                    android:contentDescription="@string/open"/>

                <TextView
                    android:id="@+id/station_status"
                    android:text="@string/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"/>
            </TableRow>

            <TableRow>
                <ImageView
                    android:id="@+id/imageViewNb"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_directions_bike_black_24dp"
                    android:contentDescription="@string/bike"/>

                <TextView
                    android:id="@+id/station_bike_stands"
                    android:text="@string/bikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"/>
            </TableRow>
            <TableRow>
                <ImageView
                    android:id="@+id/imageViewAvailable"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_directions_bike_black_24dp"
                    android:contentDescription="@string/bike"/>

                <TextView
                    android:id="@+id/station_available_bike_stands"
                    android:text="@string/available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"/>
            </TableRow>
            <TableRow
                android:id="@+id/map_row">
                <ImageView
                    android:id="@+id/imageViewAddress"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_location_on_black_24dp"
                    android:contentDescription="@string/address"/>

                <TextView
                    android:id="@+id/station_address"
                    android:text="@string/address"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"/>

                <ImageView
                    android:id="@+id/imageViewMaps"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_map_black_24dp"
                    android:contentDescription="@string/map"/>
            </TableRow>

            <TableRow>
                <ImageView
                    android:id="@+id/imageViewUpdate"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_access_time_black_24dp"
                    android:contentDescription="@string/time"/>

                <TextView
                    android:id="@+id/station_maj_date"
                    android:text="@string/maj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>